populate build context with configuration options; configure kotlin compiler from the build context
GitOrigin-RevId: 3e011567049c11cab0b12631aaaa1ccd8dd1835d