@@ -4,23 +4,36 @@ package com.intellij.tools.build.bazel.jvmIncBuilder.impl;
 import com.intellij.tools.build.bazel.jvmIncBuilder.*;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.jps.dependency.NodeSource;
 import org.jetbrains.jps.dependency.NodeSourcePathMapper;
 import org.jetbrains.jps.dependency.impl.PathSourceMapper;
 
+import java.io.File;
 import java.nio.file.Path;
+import java.util.*;
 
+import static org.jetbrains.jps.javac.Iterators.map;
+
+/** @noinspection IO_FILE_USAGE*/
 public class BuildContextImpl implements BuildContext {
   private final String myTargetName;
+  private final Map<CLFlags, List<String>> myFlags;
   private final Path myBaseDir;
   private final PathSourceMapper myPathMapper;
-  @NotNull
-  private final Path myOutJar;
-  @Nullable
-  private final Path myAbiJar;
+  private final @NotNull Path myOutJar;
+  private final @Nullable Path myAbiJar;
   private final Path myDataDir;
 
-  public BuildContextImpl(String targetName, Path baseDir, Path outJar, @Nullable Path abiJar, String cachePrefix) {
-    myTargetName = targetName;
+  private final @NotNull NodeSourceSnapshot mySources;
+  private final @NotNull NodeSourceSnapshot myLibraries;
+  private final boolean myIsRebuild;
+  private final BuilderOptions myBuilderOptions;
+
+  private volatile boolean myHasErrors;
+
+  public BuildContextImpl(Path baseDir, String cachePrefix, Iterable<String> inputPaths, Iterable<String> inputDigests, Map<CLFlags, List<String>> flags) {
+    myFlags = Map.copyOf(flags);
+    myTargetName = CLFlags.TARGET_LABEL.getMandatoryScalarValue(flags);
     myBaseDir = baseDir;
     myPathMapper = new PathSourceMapper(
       relPath -> {
@@ -32,9 +45,121 @@ public class BuildContextImpl implements BuildContext {
         return relative.toString().replace(baseDir.getFileSystem().getSeparator(), "/");
       }
     );
-    myOutJar = outJar;
-    myAbiJar = abiJar;
-    myDataDir = outJar.resolveSibling(cachePrefix + truncateExtension(outJar.getFileName().toString()) + "-ic");
+    myOutJar = baseDir.resolve(CLFlags.OUT.getMandatoryScalarValue(flags)).normalize();
+
+    String abiPath = CLFlags.ABI_OUT.getOptionalScalarValue(flags);
+    myAbiJar = abiPath != null? baseDir.resolve(abiPath).normalize() : null;
+
+    myDataDir = myOutJar.resolveSibling(cachePrefix + truncateExtension(myOutJar.getFileName().toString()) + "-ic");
+    
+    myIsRebuild = CLFlags.NON_INCREMENTAL.isFlagSet(flags);
+
+    Map<NodeSource, String> sourcesMap = new HashMap<>();
+    Map<Path, String> otherInputsMap = new HashMap<>();
+    Iterator<String> digestsIterator = inputDigests.iterator();
+    for (String input : inputPaths) {
+      String inputDigest = digestsIterator.hasNext()? digestsIterator.next() : "";
+      Path inputPath = baseDir.resolve(input).normalize();
+      if (isSourceDependency(inputPath)) {
+        sourcesMap.put(myPathMapper.toNodeSource(input), inputDigest);
+      }
+      else {
+        otherInputsMap.put(inputPath, inputDigest);
+      }
+    }
+    mySources = new SourceSnapshotImpl(sourcesMap);
+
+    Map<NodeSource, String> libsMap = new LinkedHashMap<>(); // for the classpath order is important
+    for (String cpEntry : CLFlags.CP.getValue(flags)) {
+      Path path = baseDir.resolve(cpEntry).normalize();
+      libsMap.put(myPathMapper.toNodeSource(path), otherInputsMap.getOrDefault(path, ""));
+    }
+    myLibraries = new SourceSnapshotImpl(libsMap);
+
+    myBuilderOptions = BuilderOptions.create(buildJavaOptions(flags), buildKotlinOptions(flags, map(myLibraries.getElements(), myPathMapper::toPath)));
+  }
+
+  private static @NotNull List<String> buildKotlinOptions(Map<CLFlags, List<String>> flags, @NotNull Iterable<@NotNull Path> classpath) {
+    List<String> options = new ArrayList<>();
+    options.add("-module-name");
+    options.add(CLFlags.KOTLIN_MODULE_NAME.getMandatoryScalarValue(flags));
+
+    options.add("-no-stdlib");
+    options.add("-no-reflect");
+
+    String apiVersion = CLFlags.API_VERSION.getOptionalScalarValue(flags);
+    if (apiVersion != null) {
+      options.add("-api-version");
+      options.add(apiVersion);
+    }
+
+    String langVersion = CLFlags.LANGUAGE_VERSION.getOptionalScalarValue(flags);
+    if (langVersion != null) {
+      options.add("-language-version");
+      options.add(langVersion);
+    }
+
+    String jvmTarget = CLFlags.JVM_TARGET.getOptionalScalarValue(flags);
+    if (jvmTarget != null) {
+      options.add("-jvm-target");
+      options.add("8".equals(jvmTarget)? "1.8" : jvmTarget);
+    }
+
+    for (String annotName : CLFlags.OPT_IN.getValue(flags)) {
+      options.add("-opt-in");
+      options.add(annotName);
+    }
+    
+    String warn = CLFlags.WARN.getOptionalScalarValue(flags);
+    if ("off".equals(warn)) {
+      options.add("-nowarn");
+    }
+    else if ("error".equals(warn)) {
+      options.add("-Werror");
+    }
+    else if (warn != null) {
+      throw new IllegalArgumentException("unsupported kotlinc warning option: " + warn);
+    }
+
+    StringBuilder cp = new StringBuilder();
+    for (Path element : classpath) {
+      if (!cp.isEmpty()) {
+        cp.append(File.pathSeparator);
+      }
+      cp.append(element);
+    }
+    if (!cp.isEmpty()) {
+      options.add("-classpath");
+      options.add(cp.toString());
+    }
+
+    return options;
+  }
+  
+  private static @NotNull List<String> buildJavaOptions(Map<CLFlags, List<String>> flags) {
+    // for now, only options available in the flags map can be specified in the build configuration
+    List<String> options = new ArrayList<>();
+    String jvmTarget = CLFlags.JVM_TARGET.getOptionalScalarValue(flags);
+    if (jvmTarget != null) {
+      options.add("-source");
+      options.add(jvmTarget); // todo: need more flexibility in language level specification?
+
+      options.add("-target");
+      options.add(jvmTarget);
+    }
+    for (String exp : CLFlags.ADD_EXPORT.getValue(flags)) {
+      options.add("--add-exports");
+      options.add(exp);
+    }
+    for (String exp : CLFlags.ADD_READS.getValue(flags)) {
+      options.add("--add-reads");
+      options.add(exp);
+    }
+    return options;
+  }
+
+  private static boolean isSourceDependency(Path path) {
+    return path != null && RunnerRegistry.isCompilableSource(path);
   }
 
   @Override
@@ -44,12 +169,17 @@ public class BuildContextImpl implements BuildContext {
 
   @Override
   public boolean isRebuild() {
-    return false; // todo
+    return myIsRebuild;
   }
 
   @Override
   public boolean isCanceled() {
-    return false;
+    return false; // todo
+  }
+
+  @Override
+  public Map<CLFlags, List<String>> getFlags() {
+    return myFlags;
   }
 
   @Override
@@ -73,18 +203,18 @@ public class BuildContextImpl implements BuildContext {
   }
 
   @Override
-  public NodeSourceSnapshot getSources() {
-    return null; // todo
+  public @NotNull NodeSourceSnapshot getSources() {
+    return mySources;
   }
 
   @Override
   public NodeSourceSnapshot getBinaryDependencies() {
-    return null; // todo
+    return myLibraries;
   }
 
   @Override
-  public BuilderArgs getBuilderArgs() {
-    return null; // todo
+  public BuilderOptions getBuilderOptions() {
+    return myBuilderOptions;
   }
 
   @Override
@@ -99,12 +229,15 @@ public class BuildContextImpl implements BuildContext {
 
   @Override
   public void report(Message msg) {
+    if (msg.getKind() == Message.Kind.ERROR) {
+      myHasErrors = true;
+    }
     // todo
   }
 
   @Override
   public boolean hasErrors() {
-    return false;
+    return myHasErrors;
   }
 
   private static String truncateExtension(String filename) {
